# IntelliScope

./: LICENSE  README.md  pyproject.toml
cache/checkpoint/: .placeholder
cache/data/: .placeholder
cache/downloaded-weights/: .placeholder
colongpt/: conversation.py
colongpt/model/: __init__.py  builder.py  colongpt_arch.py
colongpt/model/language_model/: colongpt_phi.py  colongpt_phi3.py
colongpt/model/multimodal_encoder/: builder.py  interpolator.py
colongpt/model/multimodal_encoder/clip/: clip_encoder.py
colongpt/model/multimodal_encoder/convnextv2/: convnextv2_encoder.py
colongpt/model/multimodal_encoder/dino/: dinov2-debug.py  dinov2_encoder-224.py  dinov2_encoder.py
colongpt/model/multimodal_encoder/eva_clip/: eva_vit.py  (+1 more)
colongpt/model/multimodal_projector/: builder.py
colongpt/serve/: cli.py  controller.py  data_reorganize.py  gradio_web_server.py  gradio_web_server_stg1.py  gradio_web_server_stg2.py  infer.py  model_worker.py  quick_infer.py
colongpt/train/: colongpt_trainer.py  train.py
colongpt/util/: data_utils.py  mm_utils.py  utils.py
docs/: guideline-for-ColonGPT.md  guideline-for-ColonINST.md  promotional-materials-zh.md  troubleshooting-guide.md
script/: loss_print.py  requirements.txt
script/infer_eval/: eval.slurm  infer-cap.slurm  infer_cli.slurm  infer_full.slurm  infer_lora.slurm
script/multimodal_benchmark/: multimodal_evaluator.py
script/prepare_data/: data_reorganize.slurm
script/quick_start/: quickstart.py
script/train/: full_tuning.slurm  lora_tuning.slurm  stage1_tuning.slurm  stage2_tuning.slurm
(+4 files in other folders)
